Prod mode - scraper

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,8 @@ logs/
 *.html
 *.parquet
 
+# =====================================================
+# Folders
+# =====================================================
+
+scraper/wordpress_content/
